--- a/src/components/QuestionBox/QuestionBox.css
+++ b/src/components/QuestionBox/QuestionBox.css
@@ -23,7 +23,7 @@
     color: yellow;
     font-size: 1rem;
     padding: 12px;
-    border-radius: 50px 50px 0px 0px;
+    /*border-radius: 50px 50px 0px 0px;*/
     position: relative;
     top: 11px;
 }
@@ -43,7 +43,7 @@
 }
 
 .q-box_options {
-    background-color: var(--common-answer-color); /* Use custom color variable */
+    background-color: white; /* Use custom color variable */
     border: 1px solid #7A70ED;
     margin: 9px 0px;
     padding: 5px 0px;
